Added plain simd test